--- a/openApiDocs/v1.0/Bookings.yml
+++ b/openApiDocs/v1.0/Bookings.yml
@@ -217,7 +217,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -289,7 +289,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -320,7 +320,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -351,7 +351,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -492,7 +492,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -525,7 +525,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -533,7 +533,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingAppointment-id
           in: path
-          description: 'key: id of bookingAppointment'
+          description: The unique identifier of bookingAppointment
           required: true
           style: simple
           schema:
@@ -605,7 +605,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -613,7 +613,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingAppointment-id
           in: path
-          description: 'key: id of bookingAppointment'
+          description: The unique identifier of bookingAppointment
           required: true
           style: simple
           schema:
@@ -644,7 +644,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -652,7 +652,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingAppointment-id
           in: path
-          description: 'key: id of bookingAppointment'
+          description: The unique identifier of bookingAppointment
           required: true
           style: simple
           schema:
@@ -683,7 +683,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -691,7 +691,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingAppointment-id
           in: path
-          description: 'key: id of bookingAppointment'
+          description: The unique identifier of bookingAppointment
           required: true
           style: simple
           schema:
@@ -729,7 +729,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -866,7 +866,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -899,7 +899,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -907,7 +907,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingAppointment-id
           in: path
-          description: 'key: id of bookingAppointment'
+          description: The unique identifier of bookingAppointment
           required: true
           style: simple
           schema:
@@ -979,7 +979,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -987,7 +987,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingAppointment-id
           in: path
-          description: 'key: id of bookingAppointment'
+          description: The unique identifier of bookingAppointment
           required: true
           style: simple
           schema:
@@ -1018,7 +1018,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1026,7 +1026,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingAppointment-id
           in: path
-          description: 'key: id of bookingAppointment'
+          description: The unique identifier of bookingAppointment
           required: true
           style: simple
           schema:
@@ -1057,7 +1057,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1065,7 +1065,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingAppointment-id
           in: path
-          description: 'key: id of bookingAppointment'
+          description: The unique identifier of bookingAppointment
           required: true
           style: simple
           schema:
@@ -1103,7 +1103,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1172,7 +1172,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1205,7 +1205,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1213,7 +1213,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingCustomerBase-id
           in: path
-          description: 'key: id of bookingCustomerBase'
+          description: The unique identifier of bookingCustomerBase
           required: true
           style: simple
           schema:
@@ -1261,7 +1261,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1269,7 +1269,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingCustomerBase-id
           in: path
-          description: 'key: id of bookingCustomerBase'
+          description: The unique identifier of bookingCustomerBase
           required: true
           style: simple
           schema:
@@ -1300,7 +1300,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1308,7 +1308,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingCustomerBase-id
           in: path
-          description: 'key: id of bookingCustomerBase'
+          description: The unique identifier of bookingCustomerBase
           required: true
           style: simple
           schema:
@@ -1339,7 +1339,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1417,7 +1417,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1450,7 +1450,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1458,7 +1458,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingCustomQuestion-id
           in: path
-          description: 'key: id of bookingCustomQuestion'
+          description: The unique identifier of bookingCustomQuestion
           required: true
           style: simple
           schema:
@@ -1509,7 +1509,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1517,7 +1517,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingCustomQuestion-id
           in: path
-          description: 'key: id of bookingCustomQuestion'
+          description: The unique identifier of bookingCustomQuestion
           required: true
           style: simple
           schema:
@@ -1548,7 +1548,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1556,7 +1556,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingCustomQuestion-id
           in: path
-          description: 'key: id of bookingCustomQuestion'
+          description: The unique identifier of bookingCustomQuestion
           required: true
           style: simple
           schema:
@@ -1587,7 +1587,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1647,7 +1647,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1672,7 +1672,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1697,7 +1697,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1829,7 +1829,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1862,7 +1862,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1870,7 +1870,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingService-id
           in: path
-          description: 'key: id of bookingService'
+          description: The unique identifier of bookingService
           required: true
           style: simple
           schema:
@@ -1939,7 +1939,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1947,7 +1947,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingService-id
           in: path
-          description: 'key: id of bookingService'
+          description: The unique identifier of bookingService
           required: true
           style: simple
           schema:
@@ -1978,7 +1978,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -1986,7 +1986,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingService-id
           in: path
-          description: 'key: id of bookingService'
+          description: The unique identifier of bookingService
           required: true
           style: simple
           schema:
@@ -2017,7 +2017,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -2086,7 +2086,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -2119,7 +2119,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -2127,7 +2127,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingStaffMemberBase-id
           in: path
-          description: 'key: id of bookingStaffMemberBase'
+          description: The unique identifier of bookingStaffMemberBase
           required: true
           style: simple
           schema:
@@ -2175,7 +2175,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -2183,7 +2183,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingStaffMemberBase-id
           in: path
-          description: 'key: id of bookingStaffMemberBase'
+          description: The unique identifier of bookingStaffMemberBase
           required: true
           style: simple
           schema:
@@ -2214,7 +2214,7 @@ paths:
       parameters:
         - name: bookingBusiness-id
           in: path
-          description: 'key: id of bookingBusiness'
+          description: The unique identifier of bookingBusiness
           required: true
           style: simple
           schema:
@@ -2222,7 +2222,7 @@ paths:
           x-ms-docs-key-type: bookingBusiness
         - name: bookingStaffMemberBase-id
           in: path
-          description: 'key: id of bookingStaffMemberBase'
+          description: The unique identifier of bookingStaffMemberBase
           required: true
           style: simple
           schema:
@@ -2336,7 +2336,7 @@ paths:
       parameters:
         - name: bookingCurrency-id
           in: path
-          description: 'key: id of bookingCurrency'
+          description: The unique identifier of bookingCurrency
           required: true
           style: simple
           schema:
@@ -2385,7 +2385,7 @@ paths:
       parameters:
         - name: bookingCurrency-id
           in: path
-          description: 'key: id of bookingCurrency'
+          description: The unique identifier of bookingCurrency
           required: true
           style: simple
           schema:
@@ -2416,7 +2416,7 @@ paths:
       parameters:
         - name: bookingCurrency-id
           in: path
-          description: 'key: id of bookingCurrency'
+          description: The unique identifier of bookingCurrency
           required: true
           style: simple
           schema:
