--- a/openApiDocs/v1.0/Devices.ServiceAnnouncement.yml
+++ b/openApiDocs/v1.0/Devices.ServiceAnnouncement.yml
@@ -196,7 +196,7 @@ paths:
       parameters:
         - name: serviceHealth-id
           in: path
-          description: 'key: id of serviceHealth'
+          description: The unique identifier of serviceHealth
           required: true
           style: simple
           schema:
@@ -248,7 +248,7 @@ paths:
       parameters:
         - name: serviceHealth-id
           in: path
-          description: 'key: id of serviceHealth'
+          description: The unique identifier of serviceHealth
           required: true
           style: simple
           schema:
@@ -279,7 +279,7 @@ paths:
       parameters:
         - name: serviceHealth-id
           in: path
-          description: 'key: id of serviceHealth'
+          description: The unique identifier of serviceHealth
           required: true
           style: simple
           schema:
@@ -307,7 +307,7 @@ paths:
       parameters:
         - name: serviceHealth-id
           in: path
-          description: 'key: id of serviceHealth'
+          description: The unique identifier of serviceHealth
           required: true
           style: simple
           schema:
@@ -414,7 +414,7 @@ paths:
       parameters:
         - name: serviceHealth-id
           in: path
-          description: 'key: id of serviceHealth'
+          description: The unique identifier of serviceHealth
           required: true
           style: simple
           schema:
@@ -447,7 +447,7 @@ paths:
       parameters:
         - name: serviceHealth-id
           in: path
-          description: 'key: id of serviceHealth'
+          description: The unique identifier of serviceHealth
           required: true
           style: simple
           schema:
@@ -455,7 +455,7 @@ paths:
           x-ms-docs-key-type: serviceHealth
         - name: serviceHealthIssue-id
           in: path
-          description: 'key: id of serviceHealthIssue'
+          description: The unique identifier of serviceHealthIssue
           required: true
           style: simple
           schema:
@@ -517,7 +517,7 @@ paths:
       parameters:
         - name: serviceHealth-id
           in: path
-          description: 'key: id of serviceHealth'
+          description: The unique identifier of serviceHealth
           required: true
           style: simple
           schema:
@@ -525,7 +525,7 @@ paths:
           x-ms-docs-key-type: serviceHealth
         - name: serviceHealthIssue-id
           in: path
-          description: 'key: id of serviceHealthIssue'
+          description: The unique identifier of serviceHealthIssue
           required: true
           style: simple
           schema:
@@ -556,7 +556,7 @@ paths:
       parameters:
         - name: serviceHealth-id
           in: path
-          description: 'key: id of serviceHealth'
+          description: The unique identifier of serviceHealth
           required: true
           style: simple
           schema:
@@ -564,7 +564,7 @@ paths:
           x-ms-docs-key-type: serviceHealth
         - name: serviceHealthIssue-id
           in: path
-          description: 'key: id of serviceHealthIssue'
+          description: The unique identifier of serviceHealthIssue
           required: true
           style: simple
           schema:
@@ -591,7 +591,7 @@ paths:
       parameters:
         - name: serviceHealth-id
           in: path
-          description: 'key: id of serviceHealth'
+          description: The unique identifier of serviceHealth
           required: true
           style: simple
           schema:
@@ -599,7 +599,7 @@ paths:
           x-ms-docs-key-type: serviceHealth
         - name: serviceHealthIssue-id
           in: path
-          description: 'key: id of serviceHealthIssue'
+          description: The unique identifier of serviceHealthIssue
           required: true
           style: simple
           schema:
@@ -758,7 +758,7 @@ paths:
       parameters:
         - name: serviceHealthIssue-id
           in: path
-          description: 'key: id of serviceHealthIssue'
+          description: The unique identifier of serviceHealthIssue
           required: true
           style: simple
           schema:
@@ -820,7 +820,7 @@ paths:
       parameters:
         - name: serviceHealthIssue-id
           in: path
-          description: 'key: id of serviceHealthIssue'
+          description: The unique identifier of serviceHealthIssue
           required: true
           style: simple
           schema:
@@ -851,7 +851,7 @@ paths:
       parameters:
         - name: serviceHealthIssue-id
           in: path
-          description: 'key: id of serviceHealthIssue'
+          description: The unique identifier of serviceHealthIssue
           required: true
           style: simple
           schema:
@@ -878,7 +878,7 @@ paths:
       parameters:
         - name: serviceHealthIssue-id
           in: path
-          description: 'key: id of serviceHealthIssue'
+          description: The unique identifier of serviceHealthIssue
           required: true
           style: simple
           schema:
@@ -1042,7 +1042,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1107,7 +1107,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1138,7 +1138,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1169,7 +1169,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1249,7 +1249,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1282,7 +1282,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1290,7 +1290,7 @@ paths:
           x-ms-docs-key-type: serviceUpdateMessage
         - name: serviceAnnouncementAttachment-id
           in: path
-          description: 'key: id of serviceAnnouncementAttachment'
+          description: The unique identifier of serviceAnnouncementAttachment
           required: true
           style: simple
           schema:
@@ -1343,7 +1343,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1351,7 +1351,7 @@ paths:
           x-ms-docs-key-type: serviceUpdateMessage
         - name: serviceAnnouncementAttachment-id
           in: path
-          description: 'key: id of serviceAnnouncementAttachment'
+          description: The unique identifier of serviceAnnouncementAttachment
           required: true
           style: simple
           schema:
@@ -1382,7 +1382,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1390,7 +1390,7 @@ paths:
           x-ms-docs-key-type: serviceUpdateMessage
         - name: serviceAnnouncementAttachment-id
           in: path
-          description: 'key: id of serviceAnnouncementAttachment'
+          description: The unique identifier of serviceAnnouncementAttachment
           required: true
           style: simple
           schema:
@@ -1421,7 +1421,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1429,7 +1429,7 @@ paths:
           x-ms-docs-key-type: serviceUpdateMessage
         - name: serviceAnnouncementAttachment-id
           in: path
-          description: 'key: id of serviceAnnouncementAttachment'
+          description: The unique identifier of serviceAnnouncementAttachment
           required: true
           style: simple
           schema:
@@ -1455,7 +1455,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1463,7 +1463,7 @@ paths:
           x-ms-docs-key-type: serviceUpdateMessage
         - name: serviceAnnouncementAttachment-id
           in: path
-          description: 'key: id of serviceAnnouncementAttachment'
+          description: The unique identifier of serviceAnnouncementAttachment
           required: true
           style: simple
           schema:
@@ -1496,7 +1496,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
@@ -1522,7 +1522,7 @@ paths:
       parameters:
         - name: serviceUpdateMessage-id
           in: path
-          description: 'key: id of serviceUpdateMessage'
+          description: The unique identifier of serviceUpdateMessage
           required: true
           style: simple
           schema:
