--- a/openApiDocs/beta/ChangeNotifications.yml
+++ b/openApiDocs/beta/ChangeNotifications.yml
@@ -93,7 +93,7 @@ paths:
       parameters:
         - name: subscription-id
           in: path
-          description: 'key: id of subscription'
+          description: The unique identifier of subscription
           required: true
           style: simple
           schema:
@@ -148,7 +148,7 @@ paths:
       parameters:
         - name: subscription-id
           in: path
-          description: 'key: id of subscription'
+          description: The unique identifier of subscription
           required: true
           style: simple
           schema:
@@ -183,7 +183,7 @@ paths:
       parameters:
         - name: subscription-id
           in: path
-          description: 'key: id of subscription'
+          description: The unique identifier of subscription
           required: true
           style: simple
           schema:
@@ -210,7 +210,7 @@ paths:
       parameters:
         - name: subscription-id
           in: path
-          description: 'key: id of subscription'
+          description: The unique identifier of subscription
           required: true
           style: simple
           schema:
@@ -239,7 +239,7 @@ components:
               description: 'Required. Indicates the type of change in the subscribed resource that will raise a change notification. The supported values are: created, updated, deleted. Multiple values can be combined using a comma-separated list. Note:  Drive root item and list change notifications support only the updated changeType. User and group change notifications support updated and deleted changeType. Use updated to receive notifications when user or group is created, updated or soft deleted.  Use deleted to receive notifications when user or group is permanently deleted.'
             clientState:
               type: string
-              description: Optional. Specifies the value of the clientState property sent by the service in each change notification. The maximum length is 255 characters. The client can check that the change notification came from the service by comparing the value of the clientState property sent with the subscription with the value of the clientState property received with each change notification.
+              description: Required. Specifies the value of the clientState property sent by the service in each change notification. The maximum length is 255 characters. The client can check that the change notification came from the service by comparing the value of the clientState property sent with the subscription with the value of the clientState property received with each change notification.
               nullable: true
             creatorId:
               type: string
