--- a/openApiDocs/v1.0/DeviceManagement.Actions.yml
+++ b/openApiDocs/v1.0/DeviceManagement.Actions.yml
@@ -15,7 +15,7 @@ paths:
       parameters:
         - name: deviceCompliancePolicy-id
           in: path
-          description: 'key: id of deviceCompliancePolicy'
+          description: The unique identifier of deviceCompliancePolicy
           required: true
           style: simple
           schema:
@@ -68,7 +68,7 @@ paths:
       parameters:
         - name: deviceCompliancePolicy-id
           in: path
-          description: 'key: id of deviceCompliancePolicy'
+          description: The unique identifier of deviceCompliancePolicy
           required: true
           style: simple
           schema:
@@ -103,7 +103,7 @@ paths:
       parameters:
         - name: deviceConfiguration-id
           in: path
-          description: 'key: id of deviceConfiguration'
+          description: The unique identifier of deviceConfiguration
           required: true
           style: simple
           schema:
@@ -156,7 +156,7 @@ paths:
       parameters:
         - name: deviceEnrollmentConfiguration-id
           in: path
-          description: 'key: id of deviceEnrollmentConfiguration'
+          description: The unique identifier of deviceEnrollmentConfiguration
           required: true
           style: simple
           schema:
@@ -191,7 +191,7 @@ paths:
       parameters:
         - name: deviceEnrollmentConfiguration-id
           in: path
-          description: 'key: id of deviceEnrollmentConfiguration'
+          description: The unique identifier of deviceEnrollmentConfiguration
           required: true
           style: simple
           schema:
@@ -227,7 +227,7 @@ paths:
       parameters:
         - name: deviceManagementPartner-id
           in: path
-          description: 'key: id of deviceManagementPartner'
+          description: The unique identifier of deviceManagementPartner
           required: true
           style: simple
           schema:
@@ -248,7 +248,7 @@ paths:
       parameters:
         - name: deviceManagementExchangeConnector-id
           in: path
-          description: 'key: id of deviceManagementExchangeConnector'
+          description: The unique identifier of deviceManagementExchangeConnector
           required: true
           style: simple
           schema:
@@ -326,7 +326,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -348,7 +348,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -383,7 +383,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -418,7 +418,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -440,7 +440,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -462,7 +462,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -484,7 +484,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -506,7 +506,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -528,7 +528,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -550,7 +550,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -572,7 +572,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -594,7 +594,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -616,7 +616,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -637,7 +637,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -658,7 +658,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -691,7 +691,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -725,7 +725,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -747,7 +747,7 @@ paths:
       parameters:
         - name: managedDevice-id
           in: path
-          description: 'key: id of managedDevice'
+          description: The unique identifier of managedDevice
           required: true
           style: simple
           schema:
@@ -794,7 +794,7 @@ paths:
       parameters:
         - name: notificationMessageTemplate-id
           in: path
-          description: 'key: id of notificationMessageTemplate'
+          description: The unique identifier of notificationMessageTemplate
           required: true
           style: simple
           schema:
@@ -816,7 +816,7 @@ paths:
       parameters:
         - name: remoteAssistancePartner-id
           in: path
-          description: 'key: id of remoteAssistancePartner'
+          description: The unique identifier of remoteAssistancePartner
           required: true
           style: simple
           schema:
@@ -838,7 +838,7 @@ paths:
       parameters:
         - name: remoteAssistancePartner-id
           in: path
-          description: 'key: id of remoteAssistancePartner'
+          description: The unique identifier of remoteAssistancePartner
           required: true
           style: simple
           schema:
@@ -2147,7 +2147,7 @@ paths:
       parameters:
         - name: windowsAutopilotDeviceIdentity-id
           in: path
-          description: 'key: id of windowsAutopilotDeviceIdentity'
+          description: The unique identifier of windowsAutopilotDeviceIdentity
           required: true
           style: simple
           schema:
@@ -2185,7 +2185,7 @@ paths:
       parameters:
         - name: windowsAutopilotDeviceIdentity-id
           in: path
-          description: 'key: id of windowsAutopilotDeviceIdentity'
+          description: The unique identifier of windowsAutopilotDeviceIdentity
           required: true
           style: simple
           schema:
@@ -2207,7 +2207,7 @@ paths:
       parameters:
         - name: windowsAutopilotDeviceIdentity-id
           in: path
-          description: 'key: id of windowsAutopilotDeviceIdentity'
+          description: The unique identifier of windowsAutopilotDeviceIdentity
           required: true
           style: simple
           schema:
